dog-facts / fix UI flicker with rxjs state management

--- a/src/app/components/dog-facts/dog-facts.component.scss
+++ b/src/app/components/dog-facts/dog-facts.component.scss
@@ -6,13 +6,13 @@
     gap: 32px;
 
         .dog-facts{
-            height: 260px;
-            width: 40%;
+            width: 45%;
             border: solid 2px bisque;
             border-radius: 14px;
             padding: 16px 24px;
             display: flex;
             align-items: center;
             justify-content: center;
+            text-align: center;
         }
 }
